syntax = "proto3";
option go_package = "./account_proto";
package account_proto;


//注册用户客户端到登录服
message CL_LS_ReqRegisterAccoutMsg {
  string username = 1; //用户
  string password = 2; //密码
  uint32 client_type = 3;//客户端类型
  uint32 phone_num = 4; //电话号码
  string mac_addr = 5; //mac地址
  uint32 version = 6; //版本号
}

//登陆
message CL_LS_ReqLoginMsg {
  string username = 1; //用户
  string password = 2; //密码
  uint32 client_type = 3;//客户端类型
  string mac_addr = 4; //mac地址
  uint32 version = 5; //版本号
}
//登录服向客户端返回
message LS_CL_RespnLoginMsg {
  int32 rest_code = 1;//结果码
  string username = 2; //用户
  uint64 accountID = 3;//账号id
}

message CL_LS_ReqCreatePlayerMsg {
  string playername = 1; //玩家名称
  int32  sex = 2; //性别
  int32  job = 3; //游戏职业
}

//客户端发送离开到数据中心
message ClientLeaveMsg {
  uint64 accountID = 1;//账号id
  string username = 2; //用户
}